--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
 	margin-top: 2em;
 	grid-column-start: 1;
 	grid-row-start: 1;
-	margin-left: 1em;
+	margin-left: 2em;
 	
 }
 
